@@ -5,7 +5,7 @@
 
   DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  
-  Copyright 1997-2007 Sun Microsystems, Inc. All rights reserved.
+  Copyright 1997-2009 Sun Microsystems, Inc. All rights reserved.
  
   The contents of this file are subject to the terms of either the GNU
   General Public License Version 2 only ("GPL") or the Common Development
@@ -158,7 +158,7 @@ provider in the configuration files is returned.
 <TD>mail.transport.protocol</TD>
 <TD>String</TD>
 <TD>
-Specifies the default message access protocol.  The
+Specifies the default message transport protocol.  The
 <code>Session</code> method <code>getTransport()</code> returns a Transport
 object that implements this protocol.  By default the first Transport
 provider in the configuration files is returned.
@@ -215,6 +215,39 @@ Overrides the <code>mail.user</code> property.
 </TR>
 
 </TABLE>
+
+<P>
+The following properties are supported by Sun's implementation of
+JavaMail, but are not currently a required part of the specification.
+The names, types, defaults, and semantics of these properties may
+change in future releases.
+<P>
+<TABLE BORDER>
+<TR>
+<TH>Name</TH>
+<TH>Type</TH>
+<TH>Description</TH>
+</TR>
+
+<TR>
+<TD>mail.transport.protocol.<i>address-type</i></TD>
+<TD>String</TD>
+<TD>
+Specifies the default message transport protocol for the specified address type.
+The <code>Session</code> method <code>getTransport(Address)</code> returns a
+Transport object that implements this protocol when the address is of the
+specified type (e.g., "rfc822" for standard internet addresses).
+By default the first Transport configured for that address type is used.
+This property can be used to override the behavior of the
+{@link javax.mail.Transport#send send} method of the
+{@link javax.mail.Transport Transport} class so that (for example) the "smtps"
+protocol is used instead of the "smtp" protocol by setting the property
+<code>mail.transport.protocol.rfc822</code> to <code>"smtps"</code>.
+</TD>
+</TR>
+
+</TABLE>
+
 <P>
 The JavaMail API also supports several System properties;
 see the {@link javax.mail.internet} package documentation
